// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the TileImage component passes an onPressItem prop 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`the TileImage component should render 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <BVLinearGradient
      colors={
        Array [
          0,
          4278190080,
        ]
      }
      endPoint={
        Object {
          "x": 0,
          "y": 1,
        }
      }
      locations={
        Array [
          0.3,
          1,
        ]
      }
      startPoint={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 20,
        "color": "#F8F7F4",
        "fontFamily": "InterUI-Bold",
        "fontSize": 16,
        "left": 20,
        "lineHeight": 23.04,
        "position": "absolute",
      }
    }
  >
    So cool!
  </Text>
</View>
`;

exports[`the TileImage component should render without text 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
